# hardware

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: pnr.yml  synth.yml  test.yml
analysis/: blink.py  mma_flags.py  mma_led.py  pnr.py  synth.py  window_sweep.py
scripts/: run.sh
src/: accumulator.py  aligner.py  bf16_adder.py  bf16_fma.py  bf16_mac.py  bf16_multiplier.py  bfloat16.py  carry_select_adder.py  e8m10_convert.py  exp_diff.py  fixed_pe.py  fused_exp_diff.py  lza.py  main.py  mantissa_multiplier.py  mma.py  mma_4x4.py  mma_stream.py  normalizer.py  parallel_prefix.py  pe.py  pe_mac.py  rounder.py  tensor_core_8x8.py  up_counter.py
test/: conftest.py  test_accumulation_comparison.py  test_accumulation_many.py  test_accumulator.py  test_aligner.py  test_bf16_adder.py  test_bf16_fma.py  test_bf16_multiplier.py  test_bfloat16.py  test_carry_select_adder.py  test_d03_debug.py  test_data_routing.py  test_debug_failing.py  test_e8m10.py  test_error_distribution.py  test_exact_comparison.py  test_exp_diff.py  test_fixed_pe.py  test_fsm_cycle.py  test_fsm_states.py  test_fused_exp_diff.py  test_k_signal.py  test_lza.py  test_mantissa_multiplier.py  test_mma.py  test_mma_4x4.py  test_mma_stream.py  test_negative_values.py  test_normalizer.py  test_parallel_prefix.py  test_pe.py  test_pe_mac.py  test_precision_ceiling.py  test_reference_impl.py  test_rounder.py  test_seed456_trace.py  test_single_mac.py  test_tensor_core_8x8.py  test_tensor_debug.py  test_tensor_simple_case.py  (+4 more)
