[project]
name = "hardware"
version = "0.1.0"
description = "A bfloat16 tensor core in Amaranth HDL: an 8x8 systolic MAC array computing D = A·B + C with extended-precision accumulation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["amaranth[builtin-yosys]>=0.5.8", "numpy>=2.3.4"]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "W"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ty.environment]
python = "./.venv/bin/python"

[tool.uv]
no-binary-package = ["numpy"]

[tool.uv.sources]
amaranth = { git = "https://github.com/amaranth-lang/amaranth.git" }

[tool.pyrefly]
search_path = ["src"]
project-includes = ["src", "test", "analysis"]

# false positives from Amaranth `wiring.Component` metaprogramming pyrefly can't model
[[tool.pyrefly.sub_config]]
matches = "src/**"
errors = { missing-attribute = false, not-callable = false, invalid-annotation = false, unsupported-operation = false, bad-argument-type = false }

[[tool.pyrefly.sub_config]]
matches = "test/**"
errors = { missing-attribute = false, not-callable = false, invalid-annotation = false, unsupported-operation = false, bad-argument-type = false }
